fix inline button links spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -665,6 +665,8 @@ input[type="submit"],
     }
 }
 
+a.button { line-height: 3; }
+
 input[type="text"],
 input[type="email"],
 input[type="url"],
